--- a/requirements.core.txt
+++ b/requirements.core.txt
@@ -1,1 +1,5 @@
-core-main-app==1.14.*
+core-main-app==1.17.*
+core-parser-app==1.17.*
+core-website-app==1.17.*
+signals-utils==1.11.*
+core-curate-app==1.17.*
