--- a/requirements.core.txt
+++ b/requirements.core.txt
@@ -1,4 +1,4 @@
-core-main-app==2.0.0-beta2
-core-parser-app==2.0.0-beta2
-core-website-app==2.0.0-beta2
-core-curate-app==2.0.0-beta2
+core-main-app==2.0.*
+core-parser-app==2.0.*
+core-website-app==2.0.*
+core-curate-app==2.0.*
