fix: initial data
Change-Id: I2c78a72d27a73b8dffcbecc1cb385356d1e7afc1

--- a/.gitignore
+++ b/.gitignore
@@ -212,9 +212,8 @@ apache
 conf/my-mongodb.conf
 
 # tests
-curate/tests/data/parser/schema/namespace/results*
-curate/tests/data/parser/extension/explicit-implicit/results*
 xml_schemas
+xslt
 
 # redis server
 *.rdb
